force-app/main/default/objects/FStudent_Candidate__c/FStudent_Candidate__c.object-meta.xml
<CustomObject>
    <label>FStudent Candidate</label>
    <nameField>
        <label>FStudent Candidate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FStudent Candidates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>