force-app/main/default/objects/FStudent_Candidate__c/fields/F_IT_Background__c.field-meta.xml
<CustomField>
    <fullName>F_IT_Background__c</fullName>
    <defaultValue>false</defaultValue>
    <label>F IT Background</label>
    <type>Checkbox</type>
</CustomField>