force-app/main/default/objects/FStudent_Candidate__c/fields/FCustomer_Service_Member__c.field-meta.xml
<CustomField>
    <fullName>FCustomer_Service_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FCustomer Service Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FStudent_Candidates</relationshipName>
    <type>Lookup</type>
</CustomField>