force-app/main/default/objects/FStudent_Candidate__c/fields/FRating__c.field-meta.xml
<CustomField>
    <fullName>FRating__c</fullName>
    <label>FRating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>