force-app/main/default/objects/FStudent_Candidate__c/fields/FStatus__c.field-meta.xml
<CustomField>
    <fullName>FStatus__c</fullName>
    <label>FStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Working on</fullName>
                <default>true</default>
                <label>Working on</label>
            </value>
            <value>
                <fullName>Converted</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Postponed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>