force-app/main/default/objects/FStudent_Candidate__c/fields/FStudent_Source__c.field-meta.xml
<CustomField>
    <fullName>FStudent_Source__c</fullName>
    <label>FStudent Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Office Visit</fullName>
            </value>
            <value>
                <fullName>Recommendation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>